--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "server": "nodemon server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -23,5 +24,8 @@
     "stripe": "^17.6.0",
     "toastify-js": "^1.12.0",
     "validator": "^13.12.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.0"
   }
 }
